New files added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <title>LondonRoyalParks</title>
 
         <!--Defines character set to UTF-8-->
-        <meta  charset="UTF8" name="viewport" content="width=device-width, initial-scale=1">
-
+        <meta  charset="UTF8">
 
         <!--View port meta tag makes website work on all devices & screen resolutions-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,32 +15,25 @@
 
         <!--Link the css to this html file -->
         <link rel="stylesheet" type="text/css" href="css/styles.css">
+
+        <!--Add Menu Icons from sheet-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
+    <style>
+      .row{
+        margin: 2px;
+      }
+      .row .column{
+        padding:  4rem;
+        margin: 2px 0;
+      }
+      .column img{
+        width: 90%;
+        height: 90%;
+      }
+      </style>
 
     <body>
-      <!--Navigation bars-->
-      <!-- Navbar written by Nasra -->
-  <nav id="main" class="navbar fixed-top">
-      <div class="logo">
-        <a href="index.html"><h4> Famous London Parks  </h4></a>
-      </div>
-      <ul class="nav-links ">
-        <li>
-          <a href="index.html">Home</a>
-        </li>
-        <li>
-          <a href="Map_Page.html">Map View</a>
-        </li>
-        <li>
-          <a href="About.html">About Us</a>
-        </li>
-      </ul>
-      <div class="burger ">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-      </div>
-    </nav>
 
         <h1>Come and take a walk!</h1>
         <p>Here's everything you need to know about the coolest Parks in London any time of the year.</p>
