--- a/Map_Page.html
+++ b/Map_Page.html
@@ -10,6 +10,10 @@
             </p>
         </div>
 
+        <div class="tube-map">
+            <img class="background" src=tube_map.jpg>
+            
+
     </body>
 
 </html>
