--- a/Map_Page.html
+++ b/Map_Page.html
@@ -11,9 +11,8 @@
         body {font-family: Helvetica, sans-serif;}
     </style>
    
-   
-</head>    
-<body >
+   <!--background colour-->
+   <body bgcolor="#f2ffe6">
 <!-- Add navigation bars-->
 <nav id="main" class="navbar fixed-top">
     <div class="logo">
@@ -38,6 +37,7 @@
 </nav>
 
 <!--Add image with intercactive click-->
+< 
 <img class="Main"  src="TubeMapMain.jpg" usemap="#image-map">
 <map name="image-map">
     <area alt="Kensington" title="Kensington" href="" coords="140,230,40" shape="circle">
@@ -46,6 +46,10 @@
     <area alt="Green" title="Green" href="" coords="300,263,45" shape="circle">
     <area alt="Regents" title="Regents" href="" coords="346,130,60" shape="circle">
 </map>
+
+
+
+
 
 </body>
 </html>
