tweaks to index page and about us

--- a/About.html
+++ b/About.html
@@ -77,10 +77,10 @@
                         
                 <div class="column">
                     <div class="card">
-                        <img class="teamImage" src="myPhoto.jpg" alt="Sona" style="width:50%">
+                        <img class="teamImage" src="sona.jpeg" alt="Sona" style="width:auto">
                         <div class="container">
-                             <p class="name" style="text-align:center">Sona<p>
-                             <p class="title" style="text-align:center">Title description here</p>
+                             <p class="name" style="text-align:center">Sona Hathi<p>
+                             <p class="title" style="text-align:center">Product Manager</p>
                                 <div class="desc" style="text-align:center">
                                      <a style="color:black" href="https://outlook.live.com/mail/inbox"><i class="fa fa-envelope" aria-hidden="true"></i></a>
                                      <a style="color:black" href="https://www.facebook.com/andreea.romila.5"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
