--- a/green.html
+++ b/green.html
@@ -70,7 +70,7 @@ body, html {
 <div class="hero-image">
   <div class="hero-text">
     <h1 style="font-size:50px">Green Park</h1>
-    <p>For after work sun seekers</p>
+    <p>For after-work sun seekers</p>
   </div>
 </div>
 
@@ -92,7 +92,7 @@ body, html {
 
 <h4> Best Season: </h4>
 
-<p>Summer! It’s a hotspot for some after work fizz and crisps among local workers.</p>
+<p>Summer! There's an M&S across the road and it's next to Green Park tube station, which makes Londoners love it for an after-work picnic.</p>
 
 
 <div class="park-body-image-title">
