--- a/hyde.html
+++ b/hyde.html
@@ -45,7 +45,8 @@ body, html {
 }
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) img src="/Users/sonhat/Documents/GitHub/LondonParks/HydeParkHeader.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://assets.londonist.com/uploads/2016/06/i875/chairs.jpg");
+  height: 50%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -61,7 +62,75 @@ body, html {
   color: white;
 }
 
+img{
+  border-radius: 20px;
+  border: 1px solid #ddd;
+  padding: 5px;
+  margin:5px;
+  display: flex;
+  justify-content: space-around;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+img:hover{
+  border: 2px solid green;
+} 
 
+/* Popup container - can be anything you want */
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+  visibility: hidden;
+  width: auto;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: 80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
 </style>
 </head>
 <body>
@@ -87,8 +156,13 @@ body, html {
 
 <h4> Where to refuel: </h4>
 
-<p> You’re in Mayfair and Knightsbridge so it’s going to get fancy. Pick a hotel or head to an renowned institution like Scotts’ for seafood or Zuma for Sushi.</p>
+<p> You’re in Mayfair and Knightsbridge so it’s going to get fancy. Pick a hotel or head to an renowned institution like Zuma for delicious Sushi.</p>
+    <div class="popup" onclick="myFunction()" style=color:#555> <strong>Click here for directions!</strong>
+    <span class="popuptext" id="myPopup"><div class="mapouter"><div class="gmap_canvas"><iframe width="659" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Zumba%20sushi%20Mayfair&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+      <a> href="https://www.couponflat.com/plant-therapy-coupon/"</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:659px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:659px;}</style></div></span>
+    </div>
 
+    
 <h4> Best Season: </h4>
 
 <p>All year round, but ice skating at Winter Wonderland is a magical experience!</p>
@@ -96,11 +170,21 @@ body, html {
 
 <div class="park-body-image-title">
     <p><h1> Hyde Park </h1></p>
+</div>
 <div class="park-body-image-container">
     <img class="park-body-image" src="bsthydepark.jpeg">
     <img class="park-body-image" src="serpentine.jpg">
     <img class="park-body-image" src="winterwonderland.jpg">
 </div>
+
+<script>
+    // When the user clicks on div, open the popup
+    function myFunction() {
+      var popup = document.getElementById("myPopup");
+      var toggle="here"
+      popup.classList.toggle("show");
+    }
+</script>
 
 <body>
 
