--- a/Map_Page.html
+++ b/Map_Page.html
@@ -3,16 +3,20 @@
 <head>
     <!-- Link CSS to html-->
     <link href="style.css" rel="stylesheet">
-    
+
     <!--View port meta tag makes website work on all devices & screen resolutions-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Add Menu Icons from sheet-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <style>
         * {box-sizing: border-box}
         body {font-family: Helvetica, sans-serif;}
+
     </style>
    
    <!--background colour-->
-   <body bgcolor="#f2ffe6">
+   <body bgcolor="#d7ffcc">
 <!-- Add navigation bars-->
 <nav id="main" class="navbar fixed-top">
     <div class="logo">
@@ -37,19 +41,26 @@
 </nav>
 
 <!--Add image with intercactive click-->
-< 
+
 <img class="Main"  src="TubeMapMain.jpg" usemap="#image-map">
 <map name="image-map">
-    <area alt="Kensington" title="Kensington" href="" coords="140,230,40" shape="circle">
-    <area alt="Hyde" title="Hyde" href="" coords="200,280,35"shape="circle">
-    <area alt="James" title="James" href="" coords="300,365,40" shape="circle">
-    <area alt="Green" title="Green" href="" coords="300,263,45" shape="circle">
-    <area alt="Regents" title="Regents" href="" coords="346,130,60" shape="circle">
+    <area alt="Kensington" title="Kensington" href="kensington.html" target="_blank" coords="140,230,40" shape="circle">
+    <area alt="Hyde" title="Hyde" href="hyde.html" target="_blank" coords="200,280,35"shape="circle">
+    <area alt="James" title="James" href="stjames.html" target="_blank" coords="300,365,40" shape="circle">
+    <area alt="Green" title="Green" href="green.html" target="_blank"  coords="300,263,45" shape="circle">
+    <area alt="Regents" title="Regents" href="regents.html" target="_blank"  coords="346,130,60" shape="circle">
 </map>
 
 
 
-
+<footer class="footer">
+    <p class="w3-medium"> Get in touch and say 'Hello'</p>
+    <a style="color:white" href="https://outlook.live.com/mail/inbox"><i class="fa fa-envelope"></i></a>
+    <a style="color:white" href="https://www.linkedin.com/in/catalina-romila-125039153/"><i class="fa fa-linkedin"></i></a>
+    <a style="color:white" href="https://www.facebook.com/andreea.romila.5"><i class="fa fa-facebook-official"></i></a>
+    
+    <p class="w3-medium"> Powered by <a style="color:whitesmoke" href="https://github.com/Catalina37" target="_blank">GitHub</a></p>
+  </footer>
 
 </body>
 </html>
