--- a/green.html
+++ b/green.html
@@ -62,6 +62,75 @@ body, html {
   color: white;
 }
 
+img{
+  border-radius: 20px;
+  border: 1px solid #ddd;
+  padding: 5px;
+  margin:5px;
+  display: flex;
+  justify-content: space-around;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+img:hover{
+  border: 2px solid green;
+} 
+
+/* Popup container - can be anything you want */
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+  visibility: hidden;
+  width: auto;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: 80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
 
 </style>
 </head>
@@ -85,11 +154,14 @@ body, html {
 <h4> What to see: </h4>
 
 <p> The royal gun salutes, if you happen to be there on the Queen’s or Prince Charles’  Birthday. Also Canada memorial and lots of deck chairs!</p>
-
 <h4> Where to refuel: </h4>
 
 <p> L’Eto Cafe in Mayfair, it’s a 5 minute walk to get some of the most delicious selection of cakes and teas, the Honey Cake is a must try but be warned, there are queues!</p>
-
+   <div class="popup" onclick="myFunction()" style=color:#555> <strong>Click here for directions!</strong>
+      <span class="popuptext" id="myPopup"><div class="mapouter"><div class="gmap_canvas"><iframe width="659" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=L%E2%80%99Eto%20Cafe%20in%20Mayfair&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        <a> href="https://www.couponflat.com/plant-therapy-coupon/"</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:659px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:659px;}</style></div>
+      </span>
+  </div>
 <h4> Best Season: </h4>
 
 <p>Summer! There's an M&S across the road and it's next to Green Park tube station, which makes Londoners love it for an after-work picnic.</p>
@@ -103,6 +175,16 @@ body, html {
     <img class="park-body-image" src="canadamemorial.jpg">
 </div>
 
+
+ 
+<script>
+    // When the user clicks on div, open the popup
+    function myFunction() {
+      var popup = document.getElementById("myPopup");
+      var toggle="here"
+      popup.classList.toggle("show");
+    }
+</script>
 <body>
 
 <html>
